@@ -2,7 +2,7 @@
 # RDoc frontend for RubyOSA. Generate API referene documentation for the 
 # given application, based on the descriptions in the sdef(5).
 #
-# Copyright (c) 2006, Apple Computer, Inc. All rights reserved.
+# Copyright (c) 2006-2007, Apple Computer, Inc. All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -136,6 +136,7 @@ EOS
 
 path = unique_tmp_path(app.name, '.rb')
 File.open(path, 'w') { |io| io.puts fake_ruby_src }
+puts path;exit
 line = "rdoc #{ARGV[2..-1].join(' ')} \"#{path}\""
 unless system(line)
     STDERR.puts "Error when executing `#{line}' : #{$?}"
