@@ -1,4 +1,4 @@
-# Copyright (c) 2006, Apple Computer, Inc. All rights reserved.
+# Copyright (c) 2006-2007, Apple Computer, Inc. All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -518,6 +518,7 @@ EOC
         # Having an 'application' class is required.
         app_class = classes['application']
         raise "No application class defined." if app_class.nil?
+p app_class
 
         # Maps commands to the right classes.
         all_classes_but_app = classes.values.reject { |x| x.ancestors.include?(OSA::EventDispatcher) }
