@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, Apple Computer, Inc. All rights reserved.
+ * Copyright (c) 2006-2007, Apple Computer, Inc. All rights reserved.
  * 
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
